# vm_measure

./: .clang_complete  CMakeLists.txt  alloc_policy.c  cache.c  config.h  config.h.in  huge_page.c  mini_todo  misc.c  rebuild.sh  test.c  test_mykey.c  tlbsz.c
include/: debug.h  misc.h
misc/: CMakeLists.txt  Makefile  vmaux.c
paper/data/: EBS.opj  btio.xls  nfs-raid0.xls  nfs.xls  pop.xls
paper/data/alloc/: .data.un~  .gnuplot-alloc.un~  .gnuplot-alloc1.un~  .plotdata.un~  .plotdata1.un~  .plottest.un~  .test.rb.un~  .test.un~  alloc.eps  alloc_out_new  backdata  data  fwalk_time  fwalk_time_busy  fwalk_time_nsec  fwalk_time_nsec_busy  gnuplot-alloc  map_full_time  map_full_time_busy  map_full_time_nsec  map_full_time_nsec_busy  plotdata  plotdata1  regular_walk_time  regular_walk_time_busy  regular_walk_time_nsec  regular_walk_time_nsec_busy  test  unmap_clean_time  unmap_clean_time_busy  unmap_no_clean_time  unmap_no_clean_time_busy
paper/data/huge/: .fix.sh.un~  .fix_tmp.sh.un~  .large_rand_stat_128m.un~  .large_rand_stat_16m.un~  .large_rand_stat_2m.un~  .large_seq_stat_128m.un~  .large_seq_stat_16m.un~  .large_seq_stat_2m.un~  .small_rand_stat_128m.un~  .small_rand_stat_16m.un~  .small_rand_stat_2m.un~  .small_seq_stat_128m.un~  .small_seq_stat_16m.un~  .small_seq_stat_2m.un~
paper/data/huge/demand_plot/: .gnuplot-alloc1.un~  .gnuplot-huge_tlb-2m.un~  .gnuplot-on_demand-32k.un~  .gnuplot-on_demand-4k.un~  .gnuplot-on_demand.un~  .histdata-32k.un~  .histdata.un~  .split.sh.un~  gnuplot-huge_tlb_rand-128m  gnuplot-on_demand-32k  gnuplot-on_demand-4k  histdata-32k  histdata-4k  large_rand_stat_128m_fixed  large_rand_stat_128m_fixed_0  large_rand_stat_128m_fixed_1  large_rand_stat_128m_fixed_2  large_rand_stat_128m_fixed_3  large_rand_stat_16m_fixed_0  large_rand_stat_16m_fixed_1  large_rand_stat_16m_fixed_2  large_rand_stat_16m_fixed_3  large_rand_stat_2m_fixed_0  large_rand_stat_2m_fixed_1  large_rand_stat_2m_fixed_2  large_seq_stat_128m_fixed_1  large_seq_stat_128m_fixed_2  large_seq_stat_128m_fixed_3  large_seq_stat_16m_fixed_0  large_seq_stat_16m_fixed_2  large_seq_stat_2m_fixed_0  large_seq_stat_2m_fixed_2  on_demand_32k.eps  on_demand_4k.eps  small_rand_stat_128m_fixed_0  small_rand_stat_128m_fixed_1  small_rand_stat_128m_fixed_2  small_rand_stat_128m_fixed_3  small_rand_stat_16m_fixed_0  small_rand_stat_16m_fixed_1  (+14 more)
paper/data/huge/hugetlb_plot/: .gnuplot-huge_tlb-128m.un~  .gnuplot-huge_tlb-16m.un~  .gnuplot-huge_tlb-2m.un~  .gnuplot-huge_tlb.un~  .gnuplot.un~  .split.sh.un~  gnuplot-huge_tlb-128m  gnuplot-huge_tlb-16m  gnuplot-huge_tlb-2m  hugetlb_128m.eps  hugetlb_16m.eps  hugetlb_2m.eps  large_seq_stat_128m_fixed  large_seq_stat_128m_fixed_0  large_seq_stat_16m_fixed_1  large_seq_stat_16m_fixed_3  large_seq_stat_2m_fixed  large_seq_stat_2m_fixed_1  small_seq_stat_16m_fixed  small_seq_stat_16m_fixed_0  small_seq_stat_16m_fixed_1  small_seq_stat_16m_fixed_3  small_seq_stat_2m_fixed  small_seq_stat_2m_fixed_2
paper/data/raw/huge_tlb/: large_rand_stat_128m  large_rand_stat_16m  large_rand_stat_16m_fixed  large_rand_stat_2m  large_rand_stat_2m_fixed  large_seq_stat_128m  large_seq_stat_16m  large_seq_stat_16m_fixed  large_seq_stat_2m  small_rand_stat_128m  small_rand_stat_128m_fixed  small_rand_stat_16m  small_rand_stat_16m_fixed  small_rand_stat_2m  small_rand_stat_2m_fixed  small_seq_stat_128m  small_seq_stat_128m_fixed  small_seq_stat_16m  small_seq_stat_2m
paper/data/raw/tlbsz/: .l1cache.sh.un~  cache-mem-perf.10  (+769 more)
paper/data/scripts/: .README.un~  .alloc_prepare.sh.un~  .avg.rb.un~  .avg_file.c.swp  .avg_file.rb.un~  .avgf.c.un~  .parse_alloc.rb.un~  .parse_alloc.sh.un~  .stat_alloc.rb.un~  .tlb_miss_percentage.rb.un~  .tlb_parse.sh.un~  .to_rate.rb.un~  .to_rate.sh.un~  README  alloc_prepare.sh  avg2.rb  avgf  avgf.c  cache_miss_percentage.rb  fix.sh  l1-tlb.sh  l1cache.sh  parse_alloc.sh  process_perflib.rb  split.sh  tlb_miss_percentage.rb  tlb_parse.sh
paper/data/share/: .codesize.un~  codesize
paper/data/tlbsz/: .gnuplot-time.plot.un~  .gnuplot-tlb.plot.un~  .l1-miss-rate.un~  .l2-miss-rate.un~  .l3-hit-rate.un~  .mem-hit-rate.un~  .plot-cache.un~  cache-hit-rate  cache.eps  caches  gnuplot-cache.plot  gnuplot-time.plot  gnuplot-tlb.plot  l1-hit-rate  l2-hit-rate  l3-hit-rate  mem-hit-rate  timing  tlb-miss  tlb-miss-rate  tlb.eps
paper/doc/: cfp.txt  sig-alternate.cls
paper/figures/: Makefile  alloc.eps  cache.eps  hugetlb_128m.eps  hugetlb_16m.eps  hugetlb_rand_128m.eps  on_demand.eps  on_demand_32k.eps  on_demand_4k.eps  time.eps
paper/slides/: Makefile  beamercolorthemeprogressbar.sty  beamerouterthemeprogressbar.sty  go.bat  main.tex
paper/src/: Makefile  abstract.tex  acknldge.tex  alloc.tex  append.tex  clean.cmd  cloud.bib  conc.tex  dm.bib  ec2.tex  hugepage.tex  intro.tex  main.aux  main.bbl  main.blg  main.out  main.tex  make.cmd  options.tex  perf.tex  pio.bib  related.tex  sharedobj.tex  sig-alternate.cls  timing.tex  tlb.c  tlb.tex  vm.bib
paper/travel-grants/: Makefile  cv.bib  cv.tex  invoice.tex  position.tex  report.tex
(+251 files in other folders)
